--- a/port.yml
+++ b/port.yml
@@ -3,14 +3,14 @@ defines:
     BOARD: custom_vm
     CDEFS: [ESP32_VHAL, ESP32_ETH_PHY_LAN8720, VM_IS_CUSTOM]
     LAYOUT: custom_vm
-names: [PWM11, PWM29, D37, DAC0, PWM4, PWMD0, PWM15, A3, PWM0, D19, A7, D13, D20,
-    PWM16, D4, PWM1, RTC0, PWM33, PWM30, SPI0, PWM21, D39, D12, PWM8, PWM10, PWM3,
-    PWM14, RX0, PWM13, PWM7, D30, A5, D18, MISO0, PWM25, PWM12, PWM18, D21, D8, BTN0,
-    D29, D17, A0, RX2, SERIAL0, SERIAL1, TX1, MOSI0, D28, DAC1, D14, D7, PWM22, D6,
-    D0, PWM6, D25, D1, A4, SDA0, D35, RX1, SCLK0, D33, D22, PWM19, D3, TX0, D31, D27,
-    PWM26, D32, D26, PWM5, A6, SCL0, I2C0, A2, D24, D38, PWM31, PWM9, HTM0, D9, PWM17,
-    D16, TX2, D10, PWM27, D5, D11, PWM23, SERIAL2, ADC0, PWM24, PWM2, D2, PWM20, PWM28,
-    D34, D23, D15, A1, D36]
+names: [D30, PWM10, ADC0, D15, DAC0, A1, SCL0, PWM27, PWM17, D10, D3, A0, PWM6, RTC0,
+    PWM14, A2, TX2, D13, PWM20, PWM8, SPI0, D14, A6, D34, PWM33, SERIAL2, D31, PWM2,
+    D18, TX1, D39, D16, BTN0, PWMD0, PWM11, D25, D12, D26, A3, A4, PWM4, D23, D35,
+    D2, D20, D24, DAC1, D11, HTM0, SCLK0, D9, SDA0, D0, SERIAL0, PWM26, D5, D27, PWM30,
+    PWM25, D19, SERIAL1, D32, D33, D37, D22, PWM1, MISO0, RX1, PWM0, I2C0, D36, RX2,
+    D17, PWM13, A7, D29, PWM23, RX0, MOSI0, PWM29, D8, A5, PWM28, TX0, PWM15, D1,
+    PWM9, PWM16, PWM19, D38, PWM12, D7, PWM31, D28, PWM7, D21, PWM22, D4, PWM3, D6,
+    PWM5, PWM21, PWM24, PWM18]
 peripherals: [ADC0, DAC0, HTM0, I2C0, PWMD0, RTC0, SERIAL0, SERIAL1, SERIAL2, SPI0]
 pinout:
     A0: {ADC: A0}
