--- a/port.yml
+++ b/port.yml
@@ -3,14 +3,14 @@ defines:
     BOARD: custom_vm
     CDEFS: [ESP32_VHAL, ESP32_ETH_PHY_LAN8720, VM_IS_CUSTOM]
     LAYOUT: custom_vm
-names: [D30, PWM10, ADC0, D15, DAC0, A1, SCL0, PWM27, PWM17, D10, D3, A0, PWM6, RTC0,
-    PWM14, A2, TX2, D13, PWM20, PWM8, SPI0, D14, A6, D34, PWM33, SERIAL2, D31, PWM2,
-    D18, TX1, D39, D16, BTN0, PWMD0, PWM11, D25, D12, D26, A3, A4, PWM4, D23, D35,
-    D2, D20, D24, DAC1, D11, HTM0, SCLK0, D9, SDA0, D0, SERIAL0, PWM26, D5, D27, PWM30,
-    PWM25, D19, SERIAL1, D32, D33, D37, D22, PWM1, MISO0, RX1, PWM0, I2C0, D36, RX2,
-    D17, PWM13, A7, D29, PWM23, RX0, MOSI0, PWM29, D8, A5, PWM28, TX0, PWM15, D1,
-    PWM9, PWM16, PWM19, D38, PWM12, D7, PWM31, D28, PWM7, D21, PWM22, D4, PWM3, D6,
-    PWM5, PWM21, PWM24, PWM18]
+names: [D38, RX0, PWM31, PWM24, TX2, PWM25, D22, D34, ADC0, PWM21, PWM16, PWM19, PWM30,
+    PWM26, RTC0, D27, D2, D35, D36, D15, PWM33, D26, D39, SERIAL1, PWM12, PWM7, PWM10,
+    D3, I2C0, SPI0, MOSI0, PWM6, D17, A1, PWM18, PWM0, PWM23, PWM11, D25, PWM27, A3,
+    RX1, D18, D19, D23, A7, D1, PWM15, D21, PWM1, D30, D33, SCLK0, A6, D6, A5, D7,
+    SERIAL0, PWM17, D10, D11, HTM0, D29, D9, D14, TX0, PWM22, D28, MISO0, PWM20, D8,
+    PWM3, PWM13, DAC1, RX2, SDA0, PWMD0, D31, SCL0, D12, SERIAL2, D4, D37, D20, PWM8,
+    D24, PWM14, PWM2, A4, A0, D13, DAC0, PWM28, PWM9, TX1, A2, PWM29, PWM5, D5, D32,
+    D0, PWM4, BTN0, D16]
 peripherals: [ADC0, DAC0, HTM0, I2C0, PWMD0, RTC0, SERIAL0, SERIAL1, SERIAL2, SPI0]
 pinout:
     A0: {ADC: A0}
